feat: Add Telegram notification for new release APK builds

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -46,3 +46,12 @@ jobs:
         with:
           name: release-apk
           path: app/build/outputs/apk/release/*.apk
+          
+      - name: Send APK to Telegram
+        run: |
+          APK_PATH=$(ls app/build/outputs/apk/release/*.apk | head -n 1)
+
+          curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
+            -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
+            -F document=@"$APK_PATH" \
+            -F caption="New APK build uploaded
