--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -18,11 +18,11 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Set up the correct JDK version (17 is required)
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           # ✅ Change the Java version from 11 to 17
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       # Step 3: Make the Gradle wrapper executable
@@ -33,8 +33,8 @@ jobs:
       # Note: For a real Play Store release, you must sign your app.
       # This would involve adding a signingConfigs block to your build.gradle.kts
       # and using GitHub Secrets to store your keystore and passwords.
-      - name: Build AAB
-        run: ./gradlew :app:bundleRelease
+      # - name: Build AAB
+      #   run: ./gradlew :app:bundleRelease
 
       # Step 5: Build the APK
       - name: Build APK
@@ -46,7 +46,7 @@ jobs:
         with:
           name: release-apk
           path: app/build/outputs/apk/release/*.apk
-          
+
       - name: Send APK to Telegram
         run: |
           APK_PATH=$(ls app/build/outputs/apk/release/*.apk | head -n 1)
