--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -54,4 +54,4 @@ jobs:
           curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
             -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
             -F document=@"$APK_PATH" \
-            -F caption="New APK build uploaded
+            -F caption="New APK build uploaded"
