--- a/.github/workflows/android-release.yaml
+++ b/.github/workflows/android-release.yaml
@@ -7,6 +7,9 @@ on:
       - dev
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +21,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          cache: 'gradle'
 
       - run: chmod +x gradlew
 
