--- a/.github/workflows/android-release.yaml
+++ b/.github/workflows/android-release.yaml
@@ -23,28 +23,52 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
 
-      - name: Extract Version
-        id: get_version
+      - name: Bump Version
+        id: bump_version
         run: |
-          VERSION=$(grep "app.versionName" gradle.properties | cut -d'=' -f2)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Extracted version: $VERSION"
+          # Read current version
+          CURRENT_VERSION=$(grep "app.versionName" gradle.properties | cut -d'=' -f2)
+          echo "Current version: $CURRENT_VERSION"
+
+          # Increment patch version (supports X.Y and X.Y.Z)
+          if [[ $CURRENT_VERSION =~ ^([0-9]+)\.([0-9]+)$ ]]; then
+              NEW_VERSION="${BASH_REMATCH[1]}.$((BASH_REMATCH[2] + 1))"
+          elif [[ $CURRENT_VERSION =~ ^([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
+              NEW_VERSION="${BASH_REMATCH[1]}.${BASH_REMATCH[2]}.$((BASH_REMATCH[3] + 1))"
+          else
+              NEW_VERSION="$CURRENT_VERSION.1"
+          fi
+          
+          # Update gradle.properties
+          sed -i "s/app.versionName=.*/app.versionName=$NEW_VERSION/" gradle.properties
+          
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_VERSION"
+
+      - name: Commit and Push Version Bump
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add gradle.properties
+          git commit -m "chore: bump version to v${{ steps.bump_version.outputs.version }} [skip ci]"
+          git push
 
       - run: chmod +x gradlew
 
       - name: Build APK
-        run: ./gradlew :app:assembleRelease
+        run: ./gradlew :app:assembleDebug -PversionCode=${{ github.run_number }}
 
       - name: Rename APK if dev branch
         run: |
-          APK_PATH=$(ls app/build/outputs/apk/release/*.apk | head -n 1)
+          APK_PATH=$(ls app/build/outputs/apk/debug/*.apk | head -n 1)
           APK_NAME=$(basename "$APK_PATH")
 
           echo "Original APK: $APK_NAME"
 
           if [ "${GITHUB_REF_NAME}" = "dev" ]; then
             NEW_APK_NAME="dev-$APK_NAME"
-            mv "$APK_PATH" "app/build/outputs/apk/release/$NEW_APK_NAME"
+            mv "$APK_PATH" "app/build/outputs/apk/debug/$NEW_APK_NAME"
             echo "Renamed APK: $NEW_APK_NAME"
           else
             echo "APK name unchanged"
@@ -54,20 +78,20 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          name: Release v${{ steps.get_version.outputs.version }}
-          files: app/build/outputs/apk/release/*.apk
+          tag_name: v${{ steps.bump_version.outputs.version }}
+          name: Release v${{ steps.bump_version.outputs.version }}
+          files: app/build/outputs/apk/debug/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print APK name
         run: |
-          ls -lh app/build/outputs/apk/release/*.apk
+          ls -lh app/build/outputs/apk/debug/*.apk
 
       - name: Send Release URL to Telegram
         run: |
           RELEASE_URL="${{ steps.create_release.outputs.url }}"
-          VERSION="${{ steps.get_version.outputs.version }}"
+          VERSION="${{ steps.bump_version.outputs.version }}"
           echo "Sending Release URL: $RELEASE_URL"
 
           curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
